--- a/MvvmCross.Forms.Sample.Integration/IntegrationSample/IntegrationSample/Forms/Pages/AboutPage.xaml
+++ b/MvvmCross.Forms.Sample.Integration/IntegrationSample/IntegrationSample/Forms/Pages/AboutPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:forms="using:Xamarin.Forms"
-             x:Class="Example.Pages.AboutPage"
+             x:Class="IntegrationSample.Forms.Pages.AboutPage"
              Title="About">
 
   <ContentPage.Resources>
