--- a/MvvmCross.Forms.Sample.Integration/IntegrationSample/IntegrationSample/Forms/Pages/MainPage.xaml
+++ b/MvvmCross.Forms.Sample.Integration/IntegrationSample/IntegrationSample/Forms/Pages/MainPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:forms="using:Xamarin.Forms"
-             x:Class="Example.Pages.FirstPage"
+             x:Class="IntegrationSample.Forms.Pages.MainPage"
              Title="First Page">
 
     <!-- Jul 22 2015 Xamarin have not yet provided Device.OnPlatform property for W81. The below syntax works by putting "5, 0, 5, 95" into the default-->
