Implemented WinRT Phone Forms presenter. Removed support for Windows 8.1 and Windows Phone 8.1 Silverlight - deprecated platforms.

--- a/MvvmCross.Forms.Sample.Integration/IntegrationSample/IntegrationSample/Forms/Pages/MainPage.xaml
+++ b/MvvmCross.Forms.Sample.Integration/IntegrationSample/IntegrationSample/Forms/Pages/MainPage.xaml
@@ -15,7 +15,7 @@
     </ContentPage.Padding>
     
     <ContentPage.ToolbarItems>
-        <ToolbarItem Name="Menu1" Text = "About" ClassId = "About" Order = "Primary" Command="{Binding ShowAboutPageCommand}">
+        <ToolbarItem Text = "About" ClassId = "About" Order = "Primary" Command="{Binding ShowAboutPageCommand}">
             <ToolbarItem.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource"
                     WinPhone="Toolkit.Content/ApplicationBar.Add.png" 
